--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-	<div class="column feed" id="feed"></div>
-	<div class="column suplovani" id="suplovani"></div>
-	<div class="statusbar" id="statusbar"></div>
+	<div class="column left" id="left"></div>
+	<div class="column right" id="right"></div>
+	<div class="statusbar" id="statusbar">
+		<!-- logo / datum / svátek / počasí / [zobrazuje se suplování pro] -->
+	</div>
 	<!-- icons: https://gist.github.com/tbranyen/62d974681dea8ee0caa1 -->
 	<script src="script.js"></script>
 </body>
