--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="column left" id="left"></div>
-	<div class="column right" id="right"></div>
+	<div class="column suplovani" id="right"></div>
 	<div class="statusbar" id="statusbar">
 		<!-- logo / datum / svátek / počasí / [zobrazuje se suplování pro] -->
 	</div>
