--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div class="column left" id="left"></div>
+	<div class="column feed" id="left"></div>
 	<div class="column suplovani" id="right"></div>
 	<div class="statusbar" id="statusbar">
 		<!-- logo / datum / svátek / počasí / [zobrazuje se suplování pro] -->
