--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
 	<div class="column feed" id="left"></div>
 	<div class="column suplovani" id="right"></div>
-	<div class="statusbar" id="statusbar">
-		<!-- logo / datum / svátek / počasí / [zobrazuje se suplování pro] -->
-	</div>
+	<div class="statusbar" id="statusbar"></div>
+	<!-- TODO: -->
 	<!-- icons: https://gist.github.com/tbranyen/62d974681dea8ee0caa1 -->
-	<!-- https://github.com/vaniocz/svatky-vanio-cz -->
+	<!-- check image change (with same name) -->
 	<script src="script.js"></script>
 </body>
 
