introduced icons, minor fix

--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
 	<title>Gymnázium Olgy Havlové</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="weather-icons/css/weather-icons.min.css">
 </head>
 
 <body>
 	<div class="column feed" id="left"></div>
 	<div class="column suplovani" id="right"></div>
 	<div class="statusbar" id="statusbar"></div>
-	<!-- TODO: -->
-	<!-- icons: https://gist.github.com/tbranyen/62d974681dea8ee0caa1 -->
-	<!-- check image change (with same name) -->
 	<script src="script.js"></script>
 </body>
 
