missing content fixes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<div class="column suplovani" id="right"></div>
 	<div class="statusbar" id="statusbar"></div>
 	<script src="script.js"></script>
+	<!-- TODO:
+	fallback missing suplovani
+	write readme manual -->
 </body>
 
 </html>
