--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>Gymnázium Olgy Havlové</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<link rel="icon" href="proxy.php?get=favicon">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="weather-icons/css/weather-icons.min.css">
 </head>
@@ -14,9 +15,6 @@
 	<div class="column suplovani" id="right"></div>
 	<div class="statusbar" id="statusbar"></div>
 	<script src="script.js"></script>
-	<!-- TODO:
-	fallback missing suplovani
-	write readme manual -->
 </body>
 
 </html>
