--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 	<meta charset="utf-8">
 	<title>Gymnázium Olgy Havlové</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="icon" href="proxy.php?get=favicon">
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="weather-icons/css/weather-icons.min.css">
+	<link rel="icon" href="assets/favicon.png">
+	<link rel="stylesheet" href="assets/style.css">
+	<link rel="stylesheet" href="assets/weather-icons/css/weather-icons.min.css">
 </head>
 
 <body>
 	<div class="column feed" id="left"></div>
 	<div class="column suplovani" id="right"></div>
 	<div class="statusbar" id="statusbar"></div>
-	<script src="script-compiled.js"></script>
+	<script src="assets/script-compiled.js"></script>
 </body>
 
 </html>
