--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="column feed" id="left"></div>
 	<div class="column suplovani" id="right"></div>
 	<div class="statusbar" id="statusbar"></div>
-	<script src="assets/script-compiled.js"></script>
+	<script src="assets/script-compiled.js?v=1"></script>
 </body>
 
 </html>
