--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<title>Gymnázium Olgy Havlové</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="icon" href="assets/favicon.png">
-	<link rel="stylesheet" href="assets/style.css">
+	<link rel="shortcut icon" href="assets/favicon.png">
+	<link rel="stylesheet" href="assets/style.css?v=2">
 	<link rel="stylesheet" href="assets/weather-icons/css/weather-icons.min.css">
 </head>
 
@@ -14,7 +14,7 @@
 	<div class="column feed" id="left"></div>
 	<div class="column suplovani" id="right"></div>
 	<div class="statusbar" id="statusbar"></div>
-	<script src="assets/script-compiled.js?v=1"></script>
+	<script src="assets/script-compiled.js?v=2"></script>
 </body>
 
 </html>
